# v8

./: .gn  BUILD.bazel  BUILD.gn
gni/: cluster_build.gni  v8.gni
include/: v8-internal.h  v8-isolate.h  v8-snapshot.h
src/: DEPS
src/api/: api-arguments.cc  api-cluster-1.cc  api-cluster.cc  api-natives.cc  api.cc
src/asmjs/: asm-js.cc  asm-parser.cc  asmjs-cluster-1.cc  asmjs-cluster.cc
src/ast/: ast-cluster-1.cc  ast-cluster.cc  ast-value-factory.cc  ast.cc  modules.cc  prettyprinter.cc
src/base/: bits.h
src/baseline/: baseline-batch-compiler.cc  baseline-cluster.cc  bytecode-offset-iterator.cc
src/builtins/: builtins-abstract-module-source.cc  builtins-api.cc  builtins-arraybuffer.cc  builtins-async-disposable-stack.cc  builtins-async-module.cc  builtins-atomics-synchronization.cc  builtins-bigint.cc  builtins-callsite.cc  builtins-cluster-1.cc  builtins-cluster-2.cc  builtins-cluster-3.cc  builtins-cluster.cc  builtins-collections.cc  builtins-console.cc  builtins-dataview.cc  builtins-disposable-stack.cc  builtins-error.cc  builtins-internal.cc  builtins-json.cc  builtins-math.cc  builtins-number.cc  builtins-object.cc  builtins-reflect.cc  builtins-regexp.cc  builtins-shadow-realm.cc  builtins-shared-array.cc  builtins-sharedarraybuffer.cc  builtins-string-gen.cc  builtins-string.cc  builtins-symbol.cc  builtins-weak-refs.cc  constants-table-builder.cc
src/codegen/: code-comments.cc  code-desc.cc  code-factory.cc  code-reference.cc  code-stub-assembler.cc  codegen-cluster-1.cc  codegen-cluster-2.cc  codegen-cluster.cc  compilation-cache.cc  external-reference.cc  external-reference.h  handler-table.cc  jump-table-info.cc  macro-assembler-base.cc  maglev-safepoint-table.cc  pending-optimization-table.cc  source-position-table.cc  source-position.cc  unoptimized-compilation-info.cc
src/common/: assert-scope.cc  code-memory-access.cc  common-cluster-1.cc  common-cluster.cc  globals.h  ptr-compr-inl.h  ptr-compr.h  segmented-table.h
src/compiler/: bytecode-analysis.cc  compiler-cluster-1.cc  compiler-cluster.cc  csa-load-elimination.cc  heap-refs.cc  pipeline-statistics.cc  simplified-operator.cc  wasm-load-elimination.cc
src/compiler-dispatcher/: compiler-dispatcher-cluster-1.cc  compiler-dispatcher-cluster.cc  lazy-compile-dispatcher.cc  optimizing-compile-dispatcher.cc
src/d8/: d8.cc
src/date/: date-cluster-1.cc  date-cluster.cc  date.cc  dateparser.cc
src/debug/: debug-cluster-1.cc  debug-cluster.cc  debug-evaluate.cc  debug-frames.cc  debug-property-iterator.cc  debug-scope-iterator.cc  debug-stack-trace-iterator.cc
src/deoptimizer/: deoptimized-frame-info.cc  deoptimizer-cluster-1.cc  deoptimizer-cluster.cc  frame-translation-builder.cc  materialized-object-store.cc
src/diagnostics/: diagnostics-cluster-1.cc  diagnostics-cluster.cc  disassembler.cc  gdb-jit.cc  objects-debug.cc  objects-printer.cc  perf-jit.cc
src/execution/: embedder-state.cc  execution-cluster-1.cc  execution-cluster.cc  futex-emulation.cc  isolate.cc  isolate.h  microtask-queue.cc  protectors.cc  stack-guard.cc  tiering-manager.cc  v8threads.cc
src/extensions/: extensions-cluster-1.cc  extensions-cluster.cc  externalize-string-extension.cc  ignition-statistics-extension.cc  statistics-extension.cc
src/flags/: flag-definitions.h
src/handles/: handles-cluster-1.cc  handles-cluster.cc  handles.cc  local-handles.cc  persistent-handles.cc  shared-object-conveyor-handles.cc  traced-handles.cc
src/heap/: array-buffer-sweeper.cc  base-page.cc  code-range.cc  code-stats.cc  collection-barrier.cc  combined-heap.cc  ephemeron-remembered-set.cc  evacuation-allocator.cc  factory.cc  finalization-registry-cleanup-task.cc  free-list.cc  heap-allocator.cc  heap-cluster-1.cc  heap-cluster-2.cc  heap-cluster-3.cc  heap-cluster-4.cc  heap-cluster.cc  heap-controller.cc  heap-inl.h  heap-layout-tracer.cc  heap-layout.cc  heap-verifier.cc  heap.cc  incremental-marking-job.cc  large-spaces.cc  local-factory.cc  local-heap.cc  mark-compact.cc  mark-sweep-utilities.cc  marking-visitor-inl.h  marking-worklist.cc  marking.cc  memory-allocator.cc  memory-balancer.cc  memory-chunk-inl.h  memory-chunk.cc  memory-chunk.h  memory-reducer.cc  minor-gc-job.cc  minor-mark-sweep.cc  (+15 more)
src/ic/: call-optimization.cc  handler-configuration.cc  ic-cluster-1.cc  ic-cluster.cc  ic-stats.cc  stub-cache.cc
src/init/: init-cluster-1.cc  init-cluster.cc  isolate-group.cc  isolate-group.h  v8.cc
src/interpreter/: bytecode-array-iterator.cc  bytecode-array-random-iterator.cc  bytecode-array-writer.cc  bytecode-decoder.cc  bytecode-flags-and-tokens.cc  bytecode-label.cc  constant-array-builder.cc  control-flow-builders.cc  handler-table-builder.cc  interpreter-cluster-1.cc  interpreter-cluster.cc  prototype-assignment-sequence-builder.cc
src/logging/: counters.cc  log-file.cc  logging-cluster-1.cc  logging-cluster.cc
src/maglev/: maglev-graph-builder.cc
src/objects/: abstract-code.cc  backing-store.cc  bigint.cc  bytecode-array.cc  code-inl.h  code.cc  code.h  compilation-cache-table.cc  debug-objects.cc  deoptimization-data.cc  dependent-code.cc  elements-kind.cc  elements.cc  embedder-data-array.cc  (+52 more)
tools/: compute_cluster_filenames.py  extract_cluster_sources.py  generate_cluster_files.py
(+351 files in other folders)
