# Copyright 2026 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/v8_target_cpu.gni")
import("v8.gni")

# Creates a v8_source_set with cluster build filtering applied to sources.
# When cluster build is enabled, removes files that are #included by cluster
# files. When disabled, removes the cluster files themselves.
#
# Arguments: Same as v8_source_set, with sources being filtered automatically.
template("v8_cluster_source_set") {
  assert(defined(invoker.sources), "sources must be defined")

  _sources = invoker.sources
  _cluster_files = filter_include(_sources, [ "*-cluster-*.cc" ])

  if (v8_enable_cluster_build) {
    if (_cluster_files != []) {
      _excludes = exec_script("//tools/extract_cluster_sources.py",
                              rebase_path(_cluster_files),
                              "list lines",
                              _cluster_files)
      _filtered = _sources - _excludes
    } else {
      _filtered = _sources
    }
  } else {
    _filtered = _sources - _cluster_files
  }

  v8_source_set(target_name) {
    sources = _filtered
    forward_variables_from(invoker, "*", [ "sources" ])
  }
}
